# WC2026

./: .gitignore  README.md  init.sh  pyproject.toml  requirements.txt
data/: elo_snapshot.csv  fifa_rankings.csv  fixtures_schedule.json
scripts/: seed_real_results.py
src/: config.py  main.py
src/data/: __init__.py  loader.py  persistence.py
src/models/: __init__.py  evaluation.py  fixture.py  prediction.py  rating.py  team.py  tournament.py
src/predictors/: __init__.py  base.py  elo_model.py  fifa_ranking.py  goal_model.py  goal_plus_context.py  null_model.py  recent_form.py  selector.py
src/probability/: __init__.py  distributions.py  metrics.py
src/services/: __init__.py  data_service.py  evaluation_service.py  prediction_service.py
src/simulation/: __init__.py  annex_c.py  bracket.py  group_table.py  monte_carlo.py
src/web/: routes.py
src/web/templates/: base.html  fixture_detail.html  fixtures.html  fixtures_by_date.html  groups.html  index.html  performance.html  predictor_lab.html  rankings.html  simulation.html
tests/: conftest.py  test_api.py  test_predictors.py  test_probability.py  test_services.py  test_simulation.py
workflow-harness/: .workflow-config.json  TASK-PRINCIPAL.md  feature_list.json
workflow-harness/progress/: current.md  history.md
workflow-harness/prompts/: 06-monte-carlo-optimization.md  06b-group-table-tiebreakers.md  08-evaluation-service.md  10-data-integration.md  11-tests-and-docs.md  13-frontend-ui.md
